--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,11 +6,12 @@
     <title>Login Page</title>
 </head>
 <body>
-    <form action="">
+    <form action="/login" method="post">
         <label for="email">Email</label>
-        <input type="email" placeholder="abc@gmail.com" id="email",name="email">
-        <label for="Password">Password</label>
-        <input type="password" placeholder="Password" id="Password" name="Password">
+        <input type="email" placeholder="abc@gmail.com" id="email" name="email">
+        <label for="password">Password</label>
+        <input type="password" placeholder="Password" id="password" name="password">
+        <button type="submit">Submit</button>
     </form>
 </body>
 </html>
